# Projekt_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_window.cpp  main_window.h  main_window.ui  paint_area.cpp  paint_area.h
raporty/: raport 1.txt  raport 2.txt  raport 3.txt  raport 4.txt
